# kommo-db-sync

./: .gitignore  alembic.ini  data.json  docker-compose.yml  gen_auth_token.py  pyproject.toml  test.py
app/: __main__.py  config.py  entities.py
app/db/: base.py  models.py  repositories.py
app/kommo/: auth.py  companies.py  contacts.py  converters.py  events.py  leads.py  pipelines.py  tasks.py  users.py
data/: token.json
migrations/: env.py
migrations/versions/: 2025_02_17_1838_.py  2025_02_17_1908_.py  2025_02_18_0100_.py  2025_02_19_0501_.py  2025_02_23_0743_.py
